<resources>
    <string name="app_name">PartielAndroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="fragment_google_map">Hello blank fragment</string>
    <string name="action_home">Home</string>
    <string name="action_map">Google Map</string>*
    <string name="key_search_delay">key_search_delay</string>
    <string name="key_search_radius">key_search_radius</string>
    <string name="key_location_switch">key_location_switch</string>
    <string name="key_requete_api_intent">key_requete_api_intent</string>
    <string name="key_requete_api_path">key_requete_api_path</string>*
    <string name="title_activity_activite_parametre">Settings</string>

    <!--Chaine de caractères relatif au menu hamburger-->
    <string name="chaine_mail_etudiant">lucas.paulin@edu.univ-fcomte.fr</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Dessiner un cercle autour des marqueurs</string>
    <string name="pref_description_social_recommendations"></string>

    <string name="cle_dessiner_cercle">cle_dessiner_cercle</string>

    <string name="titre_longitude">Longitude</string>
    <string name="valeur_defaut_longitude">0</string>
    <string name="cle_longitude">cle_longitude</string>

    <string name="titre_latitude">Latitude</string>
    <string name="valeur_defaut_latitude">0</string>
    <string name="cle_latitude">cle_latitude</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="titre_is_circle_dawn">is circle dawn ? </string>
    <string name="titre_dummy_location">Dummy Location : </string>

    <string name="pref_title_vibrate">Vibrate</string>
>>>>>>> e43c391a6f5fd33f322ec7d2046482ed80602105
</resources>
