<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="cle_dessiner_cercle"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/valeur_defaut_longitude"
        android:inputType="textCapWords"
        android:key="@string/cle_longitude"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/titre_longitude"
        android:summary="@string/valeur_defaut_longitude"
        android:numeric="integer"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/valeur_defaut_latitude"
        android:key="cle_latitude"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/titre_latitude"
        android:summary="@string/valeur_defaut_latitude"
        android:digits="0123456789.-"
        android:inputType="numberDecimal"/>

</PreferenceScreen>
